# caelus-agent

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: release-check.yml  tests.yml
caelus_terminal/: __init__.py  cli.py  client.py  dashboard.py  helptext.py  runtime.py  templates.py  trajectory.py
scripts/: install-macos.sh  release-check.sh  uninstall-macos.sh
tests/: test_cli.py  test_client.py  test_connected_cli.py  test_dashboard.py  test_discovery.py  test_helptext.py  test_installer.py  test_interactive_cli.py  test_release.py  test_runtime.py  test_runtime_cli.py  test_runtime_health.py  test_runtime_launcher.py  test_runtime_process.py  test_runtime_status.py  test_template_cli.py  test_templates.py  test_trajectory.py  test_transcript.py
