[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caelus-terminal"
version = "0.1.0"
description = "Matrix-style terminal chat UI powered by the Hermes Agent runtime"
requires-python = ">=3.9"

[project.scripts]
caelus = "caelus_terminal.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
